# eurobin_grvc_software

./: README.md
GCS/Not ROS/ADROM/: README.txt
GCS/Not ROS/Generate2dmap/: generatemap2d.sh
GCS/Not ROS/LiCAS_GCS/: Main.cpp  gcs
GCS/Not ROS/VisualFeedback_Display/: CMakeLists.txt  README.txt
GCS/Not ROS/VisualFeedback_Display_Detect/: CMakeLists.txt  Main.cpp
GCS/ROS/target_point_publisher/: CMakeLists.txt  package.xml
GCS/ROS/target_point_publisher/include/: CMakeLists.txt
GCS/ROS/target_point_publisher/include/ModuleInterface/: ModuleInterface.cpp  ModuleInterface.h
GCS/ROS/target_point_publisher/include/path_generator/: path_generator.h
GCS/ROS/target_point_publisher/launch/: Map.rviz  run.launch
GCS/ROS/target_point_publisher/map/: output.pgm  output.yaml  outputCONOS.pgm  outputORIGINAL.pgm
GCS/ROS/target_point_publisher/src/: ADROM2ROScommunication.cpp  aruco_guidance.cpp  path_generator.cpp  targetPoint_publisher.cpp
MAVROS_launcher/: apm3.launch
On Board Lattepanda/FAST_LIO/Log/: mat_pre.txt
On Board Lattepanda/FAST_LIO/config/: mid360.yaml
On Board Lattepanda/FAST_LIO_LOCALIZATION/config/: mid360.yaml
On Board Lattepanda/FAST_LIO_LOCALIZATION/launch/: localization_mid360.launch
On Board Lattepanda/FAST_LIO_LOCALIZATION/scripts/: global_localization_NEW.py
On Board Lattepanda/livox_ros_driver2/config/: MID360_config.json
On Board Lattepanda/pose_publisher/src/: pose_publisher_node.cpp  pose_publisher_node_OLD.cpp
On Board Raspberry/: 99-usb-serial.rules
On Board Raspberry/Aruco_Parcel_Marker/Main/: Main.cpp
On Board Raspberry/Aruco_Parcel_Marker/ModuleInterface/: ModuleInterface.cpp
On Board Raspberry/Aruco_Parcel_Marker/UDPImage/: UDPImage.h
On Board Raspberry/LiCAS_A1_euROBIN/: CMakeLists.txt
On Board Raspberry/LiCAS_A1_euROBIN/ArmController/: ArmController.cpp  ArmController.cpp~  ArmController.h  ArmController.h~  CMakeLists.txt
On Board Raspberry/LiCAS_A1_euROBIN/Constants/: Constants.h  Constants.h~
On Board Raspberry/LiCAS_A1_euROBIN/Kinematics/: CMakeLists.txt  Kinematics.cpp  Kinematics.cpp~  Kinematics.h  Kinematics.h~
On Board Raspberry/LiCAS_A1_euROBIN/Main/: CMakeLists.txt  CMakeLists.txt~  Main.cpp  Main.cpp~  README.txt~  cameraParameters.yml~
On Board Raspberry/LiCAS_A1_euROBIN/ModuleInterface/: ModuleInterface.cpp  ModuleInterface.h
On Board Raspberry/LiCAS_A1_euROBIN/ServoState/: CMakeLists.txt  ReadMe.txt  ServoState.cpp  ServoState.cpp~  ServoState.h  ServoState.h~
On Board Raspberry/LiCAS_A1_euROBIN/Structures/: Structures.h  Structures.h~  StructuresInterface.h  StructuresInterface.h~
(+25 files in other folders)
